--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,46 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  height: 293px;
+}
+.header nav {
+  padding-inline: 50px;
+}
+
+.header address {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  margin-left: 184px;
+  margin-right: 50px;
+}
+
+ul li {
+  display: inline;
+}
+
+.logo-black {
+  width: 148px;
+  height: 105px;
+  top: 92px;
+  left: 478px;
+}
+
+address {
+  font-style: inherit;
+  display: inherit;
+  unicode-bidi: inherit;
+}
+
+.cover {
+}
+.lots {
+}
+.about {
+}
+.footer {
+}
