--- a/styles/style.css
+++ b/styles/style.css
@@ -78,10 +78,11 @@ address {
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.403);
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 0;
 }
 
 .cover__title {
@@ -137,30 +138,76 @@ address {
   padding-top: 12px;
   padding-bottom: 11px;
 }
+
 .lots {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 1052px;
-  height: 723px;
-  top: 1230px;
-  left: 24px;
+  margin-top: 180px;
+  padding-inline: 24px;
 }
-.card-lot-01 {
-  width: 334px;
-  height: 596px;
-  top: 74px;
-}
-.card-lot-02 {
-  width: 334px;
-  height: 596px;
-  top: 74px;
+.lots__heading {
+  font-size: 40px;
+  padding-left: 40px;
+  line-height: 46.96px;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  text-transform: uppercase;
 }
 
-.card-lot-03 {
-  width: 334px;
-  height: 596px;
-  top: 74px;
+.lots__card-list {
+  list-style-type: inherit;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  margin-bottom: 30px;
 }
+.lots__card-list-item {
+  text-align: inherit;
+  unicode-bidi: inherit;
+  height: 100%;
+  list-style: none;
+}
+.card-link {
+  text-decoration: none;
+  height: 100%;
+}
+.card {
+  position: relative;
+  min-height: 596px;
+  min-width: 334px;
+  color: white;
+  background-position: center;
+  background-size: cover;
+}
+.card_type_film {
+  background-image: url("/images/card-lot-01.jpg");
+}
+.card_type_book {
+  background-image: url("/images/card-lot-02.jpg");
+}
+.card_type_picture {
+  background-image: url("/images/card-lot-03.jpg");
+}
+.card__title {
+  font-weight: 700;
+  position: absolute;
+  padding-inline: 40px;
+  padding-top: 48px;
+  text-decoration: underline;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+.card__text {
+  position: absolute;
+  font-size: 20px;
+  padding-inline: 40px;
+  bottom: 48px;
+}
+.lots__look-more-link {
+  font-size: 20px;
+  margin-top: 30px;
+  padding-left: 40px;
+}
+
 .about {
   width: 240px;
   height: 240px;
