--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@ body {
   background-color: white;
 }
 
+a {
+  text-underline-position: under;
+}
+
 menu {
   margin-block-start: 0px;
   margin-block-end: 0px;
@@ -16,9 +20,10 @@ menu {
   align-items: center;
   height: 293px;
 }
+
 .header__menu {
-  padding-inline: 50px;
-  padding-left: 0px;
+  padding-inline-start: inherit;
+  margin-left: 50px;
 }
 
 .header__links-list {
@@ -27,18 +32,17 @@ menu {
   column-gap: 31px;
 }
 
-.header__links-list-item_no-bullit {
-  list-style: none;
-  display: flex;
-  margin-left: 0;
-}
-
 .header__links-list-item {
+  font-size: 18px;
+  line-height: 21.13px;
+  font-weight: 400;
   list-style: circle;
   text-decoration: underline;
 }
 
-.header__links-list-item {
+.header__links-list-item_no-bullit {
+  list-style: none;
+  text-decoration: none;
 }
 
 .header__logo-image {
@@ -53,13 +57,13 @@ address {
   display: inherit;
   unicode-bidi: inherit;
   justify-self: end;
-}
-
-.header address {
   font-size: 18px;
   font-weight: 400;
   line-height: 24.3px;
   text-align: left;
+}
+
+.header address {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   margin-left: 184px;
@@ -245,11 +249,48 @@ address {
 }
 
 .footer {
+  margin-top: 180px;
   display: grid;
-  grid-template-columns: 1fr min-content 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  min-height: 180px;
 }
 
+.footer__menu {
+}
+.footer__menu-list {
+}
+.footer__menu-list-item {
+  list-style: none;
+  justify-self: center;
+}
 .footer__menu-link {
+}
+.footer__adress {
+  padding-left: 50px;
+  justify-self: start;
+  max-height: 98px;
+}
+.footer__menu-link_active {
+  text-decoration: none;
+}
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  justify-content: flex-end;
+  margin-right: 50px;
+}
+.footer__social-list-item {
+}
+.footer__social-link {
+}
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
+/* .footer__menu-link {
   text-align: center;
   list-style: none;
   width: 163.9px;
@@ -263,4 +304,4 @@ address {
 .footer__social-icon {
   width: 48px;
   height: 48px;
-}
+} */
